# cpp-swagger

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yaml
cmake/: UseOpenAPI.cmake
example/: CMakeLists.txt
example/task-tracker/: CMakeLists.txt  swagger.yml
example/todo-list/: CMakeLists.txt  swagger.yml
example/todo-list/main/: CMakeLists.txt  main.cpp
example/todo-list/server/: CMakeLists.txt  handler.cpp  handler.h  server.cpp
generator/: README.md  pom.xml
generator/src/main/java/cpp/openapi/: CppModifiedBaseGenerator.java  CppOpenapiGenerator.java
generator/src/main/resources/cpp-openapi/: lib_cmake_txt.mustache  model_cmake_txt.mustache  model_cpp.mustache  model_h.mustache  model_test_cpp.mustache
generator/src/main/resources/cpp-openapi/api/: cmake.mustache  tag_cpp.mustache  tag_h.mustache
generator/src/main/resources/cpp-openapi/apiServer/: cmake.mustache  http_handler_cpp.mustache  http_handler_h.mustache  server_handler_cpp.mustache  server_handler_h.mustache
generator/src/main/resources/cpp-openapi/common/: cmake.mustache
generator/src/main/resources/cpp-openapi/model/: model_cmake_txt.mustache  model_cpp.mustache  model_h.mustache  model_test_cpp.mustache
generator/src/test/java/cpp/openapi/: CppOpenapiGeneratorTest.java
